@@ -1,3 +1,9 @@
+2006-06-16  Paul J Stevens <paul@nfg.nl>
+
+	* check_dbmail.h, check_dbmail_message.c, dbmail-message.c, 
+	  dbmail-message.h, imapcommands.c:
+	avoid duplicate insertion of headername/headervalue pairs (bug #282)
+
 2006-06-14  Aaron Stone  <aaron@serendipity.cx>
 
 	* pipe.c, modules/sortsieve.c:
